@@ -64,8 +64,12 @@ public class Prop_LangTranslator extends Property implements Language
 		return CAN_MOBS | CAN_ITEMS | CAN_ROOMS;
 	}
 
-	protected PairVector<String, Integer>	langs	= new PairVector<String, Integer>();
-	protected Set<String>					ints	= new XHashSet<String>("Common");
+	protected Map<String, Pair<Integer,List<String>>>	langs	= new Hashtable<String, Pair<Integer,List<String>>>();
+
+	protected final Set<String> trusted		= new HashSet<String>();
+	protected Set<String>		ints		= new XHashSet<String>("Common");
+	protected boolean			passive		= false;
+	protected final String[]	lastLang	= new String[] { "" };
 
 	@Override
 	public String accountForYourself()
@@ -79,6 +83,13 @@ public class Prop_LangTranslator extends Property implements Language
 		return true;
 	}
 
+	protected void logError(final String msg)
+	{
+		final String aname = (affected!=null)?affected.Name():"null";
+		final String rname = CMLib.map().getApproximateExtendedRoomID(CMLib.map().roomLocation(affected));
+		Log.errOut("Prop_LangTranslator: "+msg+": "+aname+": "+rname);
+	}
+	
 	@Override
 	public void setMiscText(final String text)
 	{
@@ -86,7 +97,9 @@ public class Prop_LangTranslator extends Property implements Language
 		final Vector<String> V=CMParms.parse(text);
 		langs.clear();
 		ints.clear();
+		trusted.clear();
 		int lastpct=100;
+		List<String> words=new ArrayList<String>(1);
 		for(int v=0;v<V.size();v++)
 		{
 			String s=V.elementAt(v);
@@ -95,13 +108,33 @@ public class Prop_LangTranslator extends Property implements Language
 			if(CMath.isNumber(s))
 				lastpct=CMath.s_int(s);
 			else
+			if(s.startsWith("'")||s.startsWith("`"))
+			{
+				String wds=s.substring(1).trim().toUpperCase();
+				if(wds.length()>0)
+					words.add(wds);
+			}
+			else
+			if(s.startsWith("#"))
+			{
+				String nm=s.substring(1).trim().toUpperCase();
+				if(nm.length()>0)
+					trusted.add(nm);
+			}
+			else
+			if(s.equalsIgnoreCase("notranslate"))
+				passive=true;
+			else
 			{
 				final Ability A=CMClass.getAbility(s);
 				if(A!=null)
 				{
-					langs.addElement(A.ID(),Integer.valueOf(lastpct));
+					langs.put(A.ID().toUpperCase(),new Pair<Integer,List<String>>(Integer.valueOf(lastpct),words));
 					ints.add(A.ID());
+					words=new ArrayList<String>(1);
 				}
+				else
+					logError("Bad parm: '"+s+"'");
 			}
 		}
 	}
@@ -112,40 +145,85 @@ public class Prop_LangTranslator extends Property implements Language
 		return ints;
 	}
 
-	@Override
-	public boolean translatesLanguage(final String language)
+	protected boolean wordMatch(String words, final List<String> allMatchWords)
 	{
-		for(int i=0;i<langs.size();i++)
+		if((allMatchWords == null)||(allMatchWords.size()==0)||(allMatchWords.contains("*")))
+			return true;
+		if(words==null)
+			return false;
+		words=words.trim().toUpperCase();
+		if(words.length()==0)
+			return false;
+		words=" "+words+" ";
+		for(final String s : allMatchWords)
 		{
-			try
+			if(s.startsWith("*"))
 			{
-				final Pair<String,Integer> p = langs.get(i);
-				if(p.first.equalsIgnoreCase(language))
+				if(s.endsWith("*"))
+				{
+					if(words.indexOf(s.substring(1,s.length()-1))>=0)
+						return true;
+				}
+				else
+				if(words.indexOf(s.substring(1)+" ")>=0)
 					return true;
 			}
-			catch(final Exception e)
+			else
+			if(s.endsWith("*"))
 			{
-				return false;
+				if(words.indexOf(" "+s.substring(0,s.length()-1))>=0)
+					return true;
 			}
+			else
+			if(s.startsWith("^"))
+			{
+				if(words.startsWith(" "+s.substring(1)))
+					return true;
+			}
+			else
+			if(words.indexOf(" "+s+" ")>=0)
+				return true;
+		}
+		return false;
+	}
+	
+	@Override
+	public boolean translatesLanguage(final String language, final String words)
+	{
+		final Pair<Integer,List<String>> p = langs.get(language.toUpperCase());
+		if(p==null)
+			return false;
+		if(wordMatch(words, p.second))
+		{
+			synchronized(lastLang)
+			{
+				lastLang[0] = language;
+			}
+			return true;
 		}
 		return false;
 	}
 
 	@Override
-	public int getProficiency(final String language)
+	public int getProficiency(String language)
 	{
-		for(int i=0;i<langs.size();i++)
+		if(language.equalsIgnoreCase(ID()))
 		{
-			if(langs.get(i).first.equalsIgnoreCase(language))
-				return langs.get(i).second.intValue();
+			synchronized(lastLang)
+			{
+				language=lastLang[0];
+			}
 		}
-		return 0;
+		final Pair<Integer,List<String>> p = langs.get(language.toUpperCase());
+		if(p==null)
+			return 0;
+		return p.first.intValue();
 	}
 
 	@Override
 	public boolean beingSpoken(final String language)
 	{
-		return true;
+		return !passive;
 	}
 
 	@Override
@@ -175,16 +253,51 @@ public class Prop_LangTranslator extends Property implements Language
 	public void executeMsg(final Environmental myHost, final CMMsg msg)
 	{
 		super.executeMsg(myHost,msg);
+		if(passive)
+		{
+			if((msg.sourceMinor()==CMMsg.TYP_SPEAK)
+			&&(msg.target()==affected)
+			&&(affected instanceof MOB)
+			&&(trusted.contains(msg.source().Name().toUpperCase().trim()))
+			&&(msg.sourceMessage()!=null))
+			{
+				Language langL;
+				if(msg.tool() instanceof Language)
+					langL=(Language)msg.tool();
+				else
+				{
+					langL=CMLib.utensils().getLanguageSpoken(msg.source());
+					if(langL == null)
+						langL=(Language)CMClass.getAbility("Common");
+				}
+				if(langs.containsKey(langL.ID().toUpperCase()))
+				{
+					final String spokenMsg = CMStrings.getSayFromMessage(msg.sourceMessage());
+					final Pair<Integer,List<String>> p = langs.get(langL.ID().toUpperCase());
+					if(wordMatch(spokenMsg, p.second))
+					{
+						final MOB M=(MOB)affected;
+						List<String> parsedInput=CMParms.parse(spokenMsg);
+						int metaFlags = MUDCmdProcessor.METAFLAG_INORDER;
+						if((!M.isPlayer())&&(M.session()!=null))
+							metaFlags|=MUDCmdProcessor.METAFLAG_POSSESSED;
+						final List<List<String>> MORE_CMDS=CMLib.lang().preCommandParser(parsedInput);
+						for(int m=0;m<MORE_CMDS.size();m++)
+							((MOB)affected).enqueCommand(MORE_CMDS.get(m),metaFlags,0);
+					}
+				}
+			}
+		}
+		else
 		if((msg.tool() instanceof Ability)
 		&&(msg.sourceMinor()!=CMMsg.TYP_TEACH))
 		{
 			if(text().length()>0)
 			{
-				final int t=langs.indexOfFirst(msg.tool().ID());
-				if(t<0)
+				final Pair<Integer,List<String>> p = langs.get(msg.tool().ID().toUpperCase());
+				if(p==null)
 					return;
-				final Integer I=langs.get(t).second;
-				if(CMLib.dice().rollPercentage()>I.intValue())
+				if(CMLib.dice().rollPercentage()>p.first.intValue())
 					return;
 			}
 			if((msg.tool().ID().equals("Fighter_SmokeSignals"))
@@ -218,5 +331,183 @@ public class Prop_LangTranslator extends Property implements Language
 				}
 			}
 		}
+	}
+	
+	protected String[] parseParms(final String code,final String val)
+	{
+		if(code.startsWith("+")||code.startsWith("-"))
+		{
+			String lang=code.substring(1);
+			String parms="";
+			if((val != null)&&(val.length()>0))
+				parms=val;
+			return new String[] {lang, parms};
+		}
+		return null;
+	}
+	
+	public Pair<Integer,List<String>> parseEquate(final Integer defI, final String arg)
+	{
+		Integer amt = (defI == null) ? Integer.valueOf(100) : defI;
+		List<String> words=new ArrayList<String>();
+		for(String s : CMParms.parse(arg))
+		{
+			if(s.endsWith("%"))
+				s=s.substring(0,s.length()-1);
+			if(CMath.isNumber(s))
+				amt=Integer.valueOf(CMath.s_int(s));
+			else
+			if(s.startsWith("'")||s.startsWith("`"))
+			{
+				String wds=s.substring(1).trim().toUpperCase();
+				if(wds.length()>0)
+					words.add(wds);
+			}
+		}
+		return new Pair<Integer,List<String>>(amt,words);
+	}
+	
+	public void rebuildMiscText()
+	{
+		StringBuilder str=new StringBuilder("");
+		if(passive)
+			str.append("NOTRANSLATE ");
+		for(final String t : trusted)
+			str.append("#"+t).append(" ");
+		for(String ID : ints)
+		{
+			final Pair<Integer,List<String>> p = langs.get(ID.toUpperCase().trim());
+			if(p!=null)
+			{
+				str.append(p.first.intValue()).append(" ");
+				for(final String s : p.second)
+				{
+					if(s.indexOf(" ")>0)
+						str.append("\"`").append(s).append("\" ");
+					else
+						str.append("`").append(s).append(" ");
+				}
+			}
+			str.append(ID).append(" ");
+		}
+		super.miscText = str.toString().trim();
+	}
+	
+	@Override
+	public String getStat(final String code)
+	{
+		int x=code.indexOf(':');
+		if((x>0)
+		&&(code.substring(0, x).toUpperCase().equals("EXISTS")))
+		{
+			final String allParms=code.substring(x+1).trim();
+			x=allParms.indexOf(' ');
+			final String lang = (x<0)?allParms:allParms.substring(0, x).trim();
+			if(lang.startsWith("#"))
+				return trusted.contains(lang.toUpperCase().trim())?"true":"false";
+			final Pair<Integer,List<String>> p=(x<0)?null:parseEquate(Integer.valueOf(100),allParms.substring(x+1).trim());
+			final Pair<Integer,List<String>> dat=langs.get(lang.toUpperCase().trim());
+			if(dat == null)
+				return "false";
+			if(p==null)
+				return "true";
+			for(final String s : p.second)
+			{
+				if(!dat.second.contains(s.toUpperCase()))
+					return "false";
+			}
+			return "true";
+		}
+		else
+			return super.getStat(code);
+	}
+	
+	@Override
+	public void setStat(final String code, final String val)
+	{
+		if(code.startsWith("+"))
+		{
+			String[] args = parseParms(code,val);
+			if(args[0].equalsIgnoreCase("PASSIVE")&& (!passive))
+			{
+				passive=true;
+				rebuildMiscText();
+			}
+			else
+			if(args[0].equalsIgnoreCase("TRUSTED"))
+			{
+				if(!trusted.contains(val.toUpperCase()))
+				{
+					trusted.add(val.toUpperCase());
+					rebuildMiscText();
+				}
+			}
+			else
+			{
+				final Ability A=CMClass.findAbility(args[0]);
+				if(A==null)
+					return;
+				if(!langs.containsKey(A.ID().toUpperCase()))
+				{
+					langs.put(A.ID().toUpperCase(), parseEquate(null,args[1]));
+					ints.add(A.ID());
+					rebuildMiscText();
+				}
+				else
+				{
+					List<String> old=langs.get(A.ID().toUpperCase()).second;
+					Integer I=langs.get(A.ID().toUpperCase()).first;
+					langs.put(A.ID().toUpperCase(), parseEquate(I,args[1]));
+					langs.get(A.ID().toUpperCase()).second.addAll(old);
+					rebuildMiscText();
+				}
+			}
+		}
+		else
+		if(code.startsWith("-"))
+		{
+			String[] args = parseParms(code,val);
+			if(args[0].equalsIgnoreCase("PASSIVE")&& (passive))
+			{
+				passive=false;
+				rebuildMiscText();
+			}
+			else
+			if(args[0].equalsIgnoreCase("TRUSTED"))
+			{
+				if(trusted.contains(val.toUpperCase()))
+				{
+					trusted.remove(val.toUpperCase());
+					rebuildMiscText();
+				}
+			}
+			else
+			{
+				final Ability A=CMClass.findAbility(args[0]);
+				if(A==null)
+					return;
+				if(args[1].length()==0)
+				{
+					if(langs.containsKey(A.ID().toUpperCase()))
+					{
+						langs.remove(A.ID().toUpperCase());
+						ints.remove(A.ID());
+						rebuildMiscText();
+					}
+				}
+				else
+				if(langs.containsKey(A.ID().toUpperCase()))
+				{
+					final Pair<Integer,List<String>> p = langs.get(A.ID().toUpperCase());
+					if((p!=null)&&(p.second.size()>0))
+					{
+						p.second.removeAll(parseEquate(null,args[1]).second);
+						rebuildMiscText();
+					}
+				}
+			}
+		}
+		else
+			super.setStat(code, val);
 	}
 }
