@@ -1016,16 +1016,25 @@ See Prop_ItemTransporter above.
 PROP_LANGTRANSLATOR=\
 Property   : Prop_LangTranslator\n\r\
 Targets    : Mobs, Items, Rooms\n\r\
-Parameters : nothing, a list of languages optionally preceded by a % chance\n\r\
+Parameters : (NOTRANSLATE) ([PERCENT]) (`WORDS) ([LANGUAGE ID]) ...\n\r\
+Parameters : (#[PLAYERNAME])\n\r\
 Example    : \n\r\
 Example    : 100% Dwarven 50% Elvish\n\r\
 Example    : Dwarven Elvish\n\r\
-Example    : 75% Dwarven Elvish\n\r\
+Example    : PASSIVE 75% `smile `beer Dwarven #BOB\n\r\
 Description: \n\r\
-This is property allows the mob or item to translate any words spoken in the room \
+This is property has two distinct but related purposes.  The original is to \
+allow the mob or item to translate any words spoken in the room \
 in a language other than Common, into Common.  The mob or item will SAY the \
 translation out loud.  The percentage chance given, which defaults to 100%, will \
-be the chance that the mob or item will translate any given sentence.  
+be the chance that the mob or item will translate any given sentence.\n\r\
+\n\r\
+The other function of this property is activated when NOTRANSLATE is one of the \
+parameters.  In this case, this property on a mob will allow that mob to understand \
+languages they otherwise would not.  In fact, understanding can be limited to \
+specific words by prefixing a language id with one or more `words.  This mode can \
+also support passing commands through to mobs by including the names of trusted \
+players using the # syntax.
 
 PROP_LANGUAGESPEAKER=\
 Property   : Prop_LanguageSpeaker\n\r\
