@@ -88,7 +88,10 @@ Example  : animaltrain bear cage kill\n\r\
 Example  : animaltrain bear wander\n\r\
 This skill allows the player to add behaviors, such as aggressiveness \
 or the tendency to roam around, or other behaviors and skills to the \
-bound or caged animal.
+bound or caged animal.  The creature can also be taught a limited \
+number of words in the trainers language, such as sit, kill, etc. Once \
+learned, the creature can be ORDERed when they are a follower, or simply \
+told to do those things using the SAYTO command.
 
 APOTHOCARY=A common misspelling for APOTHECARY.
 MIX=APOTHECARY
