@@ -16,6 +16,8 @@
  15. New thief skills: silent wear, silent hold, silent wield
  16. ResourceOverride now has more options and applications
  17. New Zappermask flags: +-RIDE, +-FOLLOW
+ 18. Prop_LangTranslator now has a rediculously expanded functionality
+ 19. AnimalTraining now supports mundane things like sit, kill, etc.
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
